# Challenges

./: .gitignore  README.md
CT-MAR/: .gitignore  README.md  challenge-data.md  competition.yaml  get-started.md  how-the-challenge-works.md  important-dates.md  objective.md  organizers.md  overview.md  pyproject.toml  results-prizes-and-publication-plan.md  scoring-metrics.md  terms.md  zipup.sh
CT-MAR/make_fake_image_variations/: make_variation.py
CT-MAR/public_data_training/: README.md
CT-MAR/scoring_program/: Dockerfile  metadata  score.py
CT-MAR/starting_kit/: README.md
CT-MAR/submission_directory/program/: Dockerfile  score.py
XAI/: Fake_Algorithm_Description_240.docx  Fake_Algorithm_Description_254.docx  README.md  README_python.md  README_python_not_docker.md  README_quick_python.md  competition.yaml  data.md  details.md  evaluation.md  how_to_submit.md  logistics.md  overview.md  participate.md  performance_evaluation.md  pyproject.toml  terms.md  tutorials.md
XAI/app_ingestion/ingestion_program/: metadata.yaml
XAI/app_ingestion/program/: Fake_Algorithm_Description.docx  entrypoint.sh  main.py
XAI/app_scoring/program/: scoring.py
XAI/ingestion_program/: ingestion.py
XAI/public_data/: README.md
XAI/sample_docker_image/: Dockerfile
XAI/score_docker_image/: Dockerfile
XAI/scoring_program/: scoring.py
XAI/starting_kit/: README.md
XAI/starting_kit/app_ingestion/ingestion_program/: metadata.yaml
XAI/starting_kit/app_ingestion/program/: entrypoint.sh  (+1 more)
XAI/starting_kit/sample_docker_image/: Dockerfile
XAI/utils/: pngs_and_back.py
(+24 files in other folders)
