[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["Benjamin Bearce <bbearce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.24.0"
numpy = "^2.0.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pydicom = "^2.4.4"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
